--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 
 <html>
 	<body>
-		<h1>Hello World</h1>
+		<p>Kirill Yurkin</p>
+		<p>Junior C++ programmer</p>
+		<p>I have interest in history, music, moviemaking and drawing.</p>
 	</body>
 </html>
