--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 	<body>
 		<p>Kirill Yurkin</p>
 		<p>Junior C++ programmer</p>
-		<p>I have interest in history, music, moviemaking and drawing.</p>
+		<p>I have interest in history, music and drawing.</p>
 	</body>
 </html>
