--- a/index.html
+++ b/index.html
@@ -5,5 +5,13 @@
 		<p>Kirill Yurkin</p>
 		<p>Junior C++ programmer</p>
 		<p>I have interest in history, music and drawing.</p>
+		<!-- <br/>
+		<hr align="left" width="300" size="4" color="#000000" />
+		<p>My projects:</p> -->
+		<br/>
+		<p>My projects:</p>
+		<a href="https://github.com/ugozapad/engine"><p>3D Engine, inspired by X-Ray</p></a> 
+		<hr align="left" width="200" size="2" color="#000000" />
+		<img src="images/temp_engine.jpg">
 	</body>
 </html>
